--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body> goat </body>
 <img width = "80%" src = "download.jpeg">
 to know <a href = "cse.html">more</a>
-
-
+my bench mateswebsites :
+to know about <a href = "https://keerthanapathivada.github.io/intro/">keerthana</a>
+to know about <a href = "https://vasu18014.github.io/into/">vasu</a>
 </html>
